# sdc

./: .gitignore  .pre-commit-config.yaml  README.md  README_RFD.md  pyproject.toml
src/sdc/: cli_main.py  sdc_main.py
